syntax = "proto3";

package notificationpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Email{
    repeated string to_email = 1;
    repeated string to_name = 2;
    string from_email = 3;
    string from_name = 4;
    string subject = 5;
    map<string, string> parameters = 6;
    map<string, string> data = 7;
}

message Sms{
    repeated string to = 1;
    map<string, string> parameters = 2;
    map<string, string> data = 3;
}

message Push{
    repeated string to = 1;
    map<string, string> parameters = 2;
    map<string, string> data = 3;
}

message Target{
    oneof backend{
        Email email = 1;
        Sms sms = 2;
        Push push = 3;
    }
}

message Message {
    string template = 1;
    string language = 2;   
    int64 send_at = 3;
    repeated Target targets = 4;
}

message SendMessageResponse{
	int32 type = 1;
	string data = 2;
}

service NotificationService {
    rpc SendMessage (Message) returns (SendMessageResponse);
}